[package]
name = "acme"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bonsaidb = { path = "../../crates/bonsaidb", version = "0.5.0", features = [
    "server",
    "acme",
    "client",
] }
env_logger = "0.10"
anyhow = "1"
