[package]
name = "basic-server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
websockets = ["bonsaidb/client-websockets", "bonsaidb/server-websockets"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bonsaidb = { path = "../../crates/bonsaidb", version = "0.1.0-dev.4", features = [
    "server",
    "cli",
    "client",
] }
futures = "0.3"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
anyhow = "1"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
