[package]
name = "basic-server"
version = "0.0.0"
edition = "2021"
publish = false

[features]
websockets = ["bonsaidb/websockets"]

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bonsaidb = { path = "../../crates/bonsaidb", version = "0.5.0", features = [
    "server",
    "password-hashing",
    "cli",
    "client",
] }
futures = "0.3"
env_logger = "0.10.0"
log = "0.4"
rand = "0.8"
anyhow = "1"
clap = { version = "4.1.4", features = ["derive"] }
